added narrator & italics support

--- a/index.html
+++ b/index.html
@@ -8,14 +8,11 @@
 	</head>
 	<body>
 		<section id="banner">
-			<span>TWELVE ANGRY MEN - interactive fiction fanmade</span>
+			<span>TWELVE ANGRY MEN - fanmade interactive fiction game</span>
 			<span>by Wayne G., Jaebin O., Stephen S. & Junyi Z. - 506</span>
 		</section>
 		<section id="chatScrollBox">
 			<div id="chatContainer">
-				<div class="narratorContainer">
-					<span class="textBox">Lights on. Start of the story</span>
-				</div>
 			</div>
 		</section>
 
