added multiple outcomes feature

--- a/index.html
+++ b/index.html
@@ -11,15 +11,11 @@
 			<span>TWELVE ANGRY MEN - fanmade interactive fiction game</span>
 			<span>by Wayne G., Jaebin O., Stephen S. & Junyi Z. - 506</span>
 		</section>
-		<section id="chatScrollBox">
-			<div id="chatContainer">
-			</div>
+		<section id="chatScrollBox" class="hidReplyBar">
+			<div id="chatContainer"></div>
 		</section>
 
 		<section id="replyBar">
-			<div class="select">I think he is innocent</div>
-			<div class="select">I give up</div>
-			<div class="select">I don't think he is innocent</div>
 		</section>
 	</body>
 	<script src="script.js"></script>
