added reply title

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 		</section>
 
 		<section id="replyBar">
+			<section id="replyOptions"></section>
 		</section>
 	</body>
 	<script src="script.js"></script>
