--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 		</section>
 
 		<section id="replyBar">
-			<section id="replyOptions"></section>
+			<div id="replyOptions"></div>
 		</section>
 	</body>
 	<script src="script.js"></script>
